fonts added Mukta Malar

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,14 +1,10 @@
 //font
 
-$font-family-name : "DM Sans";
-$font-generic-name : "sans-serif";
-
-
-
-
+$font-family-name: "Mukta Malar";
+$font-generic-name: "sans-serif";
 
 //colors
 
-$primary-color : #212121;
+$primary-color: #212121;
 $seconday-color: #707070;
 $white-color: #ffffff;
