--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   line-height: 30px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.907);
+  background-color: rgba(0, 0, 0, 0.92);
   color: white;
   .marquee {
     left: 100%;
@@ -19,6 +19,7 @@
   }
   span {
     padding-left: 8em;
+    font-weight: 600;
   }
 }
 
