--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -25,7 +25,7 @@
   overflow: hidden;
   .vertical-marquee-inner {
     position: relative;
-    animation: marquee 15s linear infinite;
+    animation: vertical-marquee 15s linear infinite;
     li {
       padding: 1rem 2rem;
       white-space: nowrap;
@@ -33,7 +33,7 @@
   }
 }
 
-@keyframes marquee {
+@keyframes vertical-marquee {
   0% {
     transform: translateY(100%);
   }
@@ -41,4 +41,57 @@
   100% {
     transform: translateY(-100%);
   }
+}
+
+// pulse
+
+.pulse-button {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #3498db;
+  border: none;
+  color: #ffffff;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.pulse-button .icon {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 5px;
+}
+
+.pulse-button .text {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+@keyframes pulse-animation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.pulse-button:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.4);
+  transform: scale(0);
+  opacity: 0;
+  animation: pulse-animation 2s infinite;
 }
