--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -95,3 +95,20 @@
   opacity: 0;
   animation: pulse-animation 2s infinite;
 }
+
+//
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
