Fix : all blogs and button url fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -63,3 +63,11 @@ iframe {
   cursor: pointer;
 }
 
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 60%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
